# stellar-canopy-platform

./: 404.html  CONTRIBUTING.md  README.md  __next.__PAGE__.txt  __next._full.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  dashboard.html  dashboard.txt  index.html  index.txt  manifest.json  next.config.ts  package.json  planters.html  planters.txt  pnpm-lock.yaml  sponsor.html  sponsor.txt  sw.js
.github/workflows/: ci.yml  deploy.yml
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
contracts/: Cargo.toml
contracts/contracts/carbon_credits/: Cargo.toml
contracts/contracts/carbon_credits/src/: lib.rs
contracts/contracts/escrow/: Cargo.toml
contracts/contracts/escrow/src/: lib.rs
contracts/contracts/governance/: Cargo.toml
contracts/contracts/governance/src/: lib.rs
contracts/contracts/planter_registry/: Cargo.toml
contracts/contracts/planter_registry/src/: lib.rs
contracts/contracts/tree_registry/: Cargo.toml
contracts/contracts/tree_registry/src/: lib.rs
dashboard/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.dashboard.__PAGE__.txt  __next.dashboard.txt
planters/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.planters.__PAGE__.txt  __next.planters.txt
public/: .nojekyll  sw.js
scripts/: generate-icons.js
sponsor/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.sponsor.__PAGE__.txt  __next.sponsor.txt
src/app/: globals.css  layout.tsx  page.tsx
(+33 files in other folders)
